wellesleynet/roles/k8s/files/sharry.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sharry
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharry
  serviceName: "sharry"
  template:
    metadata:
      labels:
        app: sharry
    spec:
      containers:
      - image: eikek0/sharry:1.4.3
        imagePullPolicy: Always
        name: sharry
        args:
          - /data/sharry.conf
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: sharry
          mountPath: /data
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: sharry
        persistentVolumeClaim:
          claimName: sharry
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: sharry
spec:
  selector:
    app: sharry
  ports:
  - name: sharry
    port: 9090
    protocol: TCP
    targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharry
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  rules:
  - host: sharry.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sharry
            port:
              number: 9090
  tls:
  - hosts:
    - sharry.kiski.co
    secretName: sharry-kiski-co-tls
